--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Titre de la page</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Camille Janin - PORTFOLIO</title>
+  <link rel="stylesheet" href="assets/styles.css">
   <script src="script.js"></script>
 </head>
 <body>
