--- a/cv.html
+++ b/cv.html
@@ -79,7 +79,7 @@
                     <div>
                         <div class="mt-2">
                             <img src="assets/images/icons/C.png" title="C#" class="img_icons">
-                            <img src="assets/images/icons/.net.png" title=".net" class="img_icons">
+                            <img src="assets/images/icons/net.png" title=".net" class="img_icons">
                         </div>
                         <div class="mt-2">
                             <img src="assets/images/icons/wordpress.png" title="Wordpress" class="img_icons">
