--- a/cv.html
+++ b/cv.html
@@ -39,7 +39,7 @@
                     <div class="container-contact">
                         <div class="contact-details">
                                 <p><i class="fa-solid fa-envelope"></i>cmille.jn@gmail.com</p>
-                                <p class="mt"><i class="fas fa-phone"></i>06 11 29 80 66</p>
+                                <p class="mt customColor"><i class="fas fa-phone"></i>06 11 29 80 66</p>
                         </div>
                         <div class="contact-details">
                                 <p><i class="fas fa-birthday-cake"></i>28 ans</p>
