responsive correstif v4-phone-v2

--- a/cv.html
+++ b/cv.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no">
     
     <title>CV Camille Janin</title>
     
@@ -39,7 +40,7 @@
                     <div class="container-contact">
                         <div class="contact-details">
                                 <p><i class="fa-solid fa-envelope"></i>cmille.jn@gmail.com</p>
-                                <p class="mt customColor"><i class="fas fa-phone"></i>06 11 29 80 66</p>
+                                <p class="mt"><i class="fas fa-phone"></i>06 11 29 80 66</p>
                         </div>
                         <div class="contact-details">
                                 <p><i class="fas fa-birthday-cake"></i>28 ans</p>
