--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="top-bar">
-        <p><  Retour</p>
+        <!-- <p><  Retour</p> -->
         <div>
             <a href="https://github.com/Oha204" target="_blank"><i class="fab fa-github social-icon github-icon"></i></a>
             <a href="https://www.linkedin.com/in/camille-janin/" target="_blank"><i class="fab fa-linkedin social-icon linkedin-icon"></i></a>
@@ -212,6 +212,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="scriptCv.js"></script>
 </body>
 </html>
