--- a/index.html
+++ b/index.html
@@ -4,11 +4,80 @@
   <meta charset="utf-8">
   <title>Camille Janin - PORTFOLIO</title>
   <link rel="stylesheet" href="assets/styles.css">
-  <script src="script.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="assets/script.js"></script>
 </head>
-<body>
-  ...
- <h1>Holà todos</h1>>
-  ...
+<body class="light-mode">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Camille JANIN</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">À propos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">FAQs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+        <button class="btn btn-outline-secondary" id="theme-toggle">Mode Sombre</button>
+      </div>
+    </div>
+  </nav>
+
+  <div class="contentFullPage">
+    <h1>Holà todos</h1>
+    ...
+  </div>
+  
+
+  
 </body>
 </html>
+
+
+<!-- <script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+  const themeToggleBtn = document.getElementById('theme-toggle');
+  const currentTheme = localStorage.getItem('theme') || 'light';
+
+  if (currentTheme === 'dark') {
+    document.body.classList.replace('light-mode', 'dark-mode');
+    themeToggleBtn.textContent = 'Mode Clair';
+    document.querySelector('.navbar').classList.replace('navbar-light', 'navbar-dark');
+    document.querySelector('.navbar').classList.replace('bg-light', 'bg-dark');
+  } else {
+    document.body.classList.replace('dark-mode', 'light-mode');
+    themeToggleBtn.textContent = 'Mode Sombre';
+    document.querySelector('.navbar').classList.replace('navbar-dark', 'navbar-light');
+    document.querySelector('.navbar').classList.replace('bg-dark', 'bg-light');
+  }
+
+  themeToggleBtn.addEventListener('click', () => {
+    if (document.body.classList.contains('light-mode')) {
+      document.body.classList.replace('light-mode', 'dark-mode');
+      themeToggleBtn.textContent = 'Mode Clair';
+      document.querySelector('.navbar').classList.replace('navbar-light', 'navbar-dark');
+      document.querySelector('.navbar').classList.replace('bg-light', 'bg-dark');
+      localStorage.setItem('theme', 'dark');
+    } else {
+      document.body.classList.replace('dark-mode', 'light-mode');
+      themeToggleBtn.textContent = 'Mode Sombre';
+      document.querySelector('.navbar').classList.replace('navbar-dark', 'navbar-light');
+      document.querySelector('.navbar').classList.replace('bg-dark', 'bg-light');
+      localStorage.setItem('theme', 'light');
+    }
+  });
+});
+
+  </script> -->
