--- a/index.html
+++ b/index.html
@@ -36,7 +36,21 @@
   </nav>
 
   <div class="contentFullPage">
-    <h1>Holà todos</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <img src="assets/images/champignon.jpg">
+        </div>
+        <div class="col">
+          <h1>Holà, moi c'est Camille</h1>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut optio libero et mollitia cumque quia ullam nesciunt dolorum voluptates, magnam maiores amet unde labore eligendi soluta accusantium eveniet sit reprehenderit</p>
+          <div>
+            <button type="button" class="btn btn-primary">CV</button>
+            <button type="button" class="btn btn-primary">Contact</button>
+          </div>
+        </div>
+      </div>
+    </div>
     ...
   </div>
   
