--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <section>
         <div class="py-4 my-5 bgCv" id="cv">
             <div class="d-flex justify-content-center align-items-center bloc-btn my-3">
-                <a href="../Portefolio/cv.html" target="_blank" class="btn-custom">
+                <a href="https://oha204.github.io/camille-janin.github.io/cv.html" target="_blank" class="btn-custom">
                     <span>CV en ligne <i class="fas fa-file-alt"></i></span>
                 </a>
                 <a href="../Portefolio/assets/images/CV_CamilleJanin.pdf" target="_blank" class="btn-custom" download="CV_CamilleJanin.pdf">
@@ -161,7 +161,7 @@
             </div>
             <div class="row justify-content-around testmargin"> 
                 <div class=" col-12 snip1577" id="recipe">
-                    <a class="text-decoration-none" href="../Portefolio/projets/coteRecette.html" target="_blank">
+                    <a class="text-decoration-none" href="https://oha204.github.io/camille-janin.github.io/coteRecette.html" target="_blank">
                         <h3 class="pt-1" id="custom_title">Côté Recette</h3>
                         <div class="content mt-2">
                             <div class="custom_paragraph_container">
