--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
             <div class="row justify-content-around testmargin"> 
                 <div class=" col-12 snip1577" id="recipe">
-                    <a class="text-decoration-none" href="https://oha204.github.io/camille-janin.github.io/coteRecette.html" target="_blank">
+                    <a class="text-decoration-none" href="https://oha204.github.io/camille-janin.github.io/projets/coteRecette.html" target="_blank">
                         <h3 class="pt-1" id="custom_title">Côté Recette</h3>
                         <div class="content mt-2">
                             <div class="custom_paragraph_container">
