màj index lien projet

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
             <div class="row justify-content-around testmargin"> 
                 <div class=" col-12 snip1577" id="recipe">
-                    <a class="text-decoration-none" href="https://oha204.github.io/camille-janin.github.io/projets/coteRecette.html" target="_blank">
+                    <a class="text-decoration-none" href="https://oha204.github.io/camille-janin.github.io/projets/coteRecette.html">
                         <h3 class="pt-1" id="custom_title">Côté Recette</h3>
                         <div class="content mt-2">
                             <div class="custom_paragraph_container">
@@ -154,7 +154,7 @@
                     </a>
                 </div>
                 <div class="col-12 snip1577" id="washing">
-                    <a class="text-decoration-none">
+                    <a class="text-decoration-none" href="https://oha204.github.io/camille-janin.github.io/projets/cleanupFront.html">
                         <h3 class="pt-1" id="custom_title">Clean Up' - Côté client</h3>
                         <div class="content mt-2">
                             <p id="custom_paragraphe">
@@ -163,9 +163,7 @@
                             </p>
                         </div>
                         <div class="lorem">
-                            <p>Page en cours de création.</p>
-                            <p>Le lien du code source en attendant une présentation du projet : </p>
-                            <p><a href="https://github.com/Oha204/NG_Pressing" target="_blank">GitHub</a></p>
+                            <p>[Projet fictif] </br> Site pour un pressing - Présentation de l'entreprise, espace client et passage de commandes.</p>
                         </div>
                     </a>
                 </div>
