projet pressing backoffice

--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
                             </p>
                         </div>
                         <div class="lorem">
-                            <p>[Projet fictif] </br> Site pour un pressing - Présentation de l'entreprise, espace client et passage de commandes.</p>
+                            <p>[Projet fictif] </br> Site pour un pressing - Partie client - Présentation de l'entreprise, espace client et passage de commandes.</p>
                         </div>
                     </a>
                 </div>
                 <div class="col-12 snip1577" id="sewing">
-                    <a class="text-decoration-none">
+                    <a class="text-decoration-none" href="https://oha204.github.io/camille-janin.github.io/projets/cleanupBack.html">
                         <h3 class="pt-1" id="custom_title">Clean Up' - BackOffice</h3>
                         <div class="content mt-2">
                             <p id="custom_paragraphe">
@@ -177,9 +177,7 @@
                             </p>
                         </div>
                         <div class="lorem">
-                            <p>Page en cours de création.</p>
-                            <p>Le lien du code source en attendant une présentation du projet : </p>
-                            <p><a href="https://github.com/Oha204/SF_Pressing" target="_blank">GitHub</a></p>
+                            <p>[Projet fictif] </br> Site pour un pressing - Partie administration - BackOffice</p>
                         </div>
                     </a>
                 </div>
