--- a/projets/cleanupFront.html
+++ b/projets/cleanupFront.html
@@ -50,7 +50,7 @@
                     <p>Projet de fin d'année - nous avons eu pour mission de réaliser une interface pour un client fictif (entreprise pressing). Nous avions à disposition un cahier des charges avec des indications et des contraintes. 
                     <p>Ce projet dispose de 2 parties :</p>
                     <div>
-                        <p>La partie application (NG_Pressing) qui permettra aux clients de : </p>
+                        <p>La partie client (NG_Pressing) qui permettra aux clients de : </p>
                         <div class="ml">
                             <li>Pouvoir découvrir l’entreprise par le biais de diverses pages,</li>
                             <li>D’avoir accès à leur espace client lorsqu’ils se connectent,</li>
@@ -58,8 +58,7 @@
                         </div>
                     </div>
                     <div class="mt-3">
-                        <p>Et la partie administration (SF_Pressing) :</p> 
-                        <!-- <a href="https://oha204.github.io/camille-janin.github.io/projets/cleanupBack.html">(SF_Pressing)</a> -->
+                        <p>Et la partie administration : <a href="https://oha204.github.io/camille-janin.github.io/projets/cleanupBack.html" class="text-decoration-none ">SF_Pressing</a> :</p> 
                         <div class="ml">
                             <li>Accessible seulement aux directeurs et leurs employés,</li>
                             <li>Permettra la gestion de toutes les informations disponibles sur le site en fonction des droits attribués à chaque compte,</li>
@@ -194,7 +193,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-8 d-flex justify-content-center align-items-center">
+                        <div class="col-md-8 d-flex justify-content-center align-items-center mb-3">
                             <img src="../assets/images/projets/cleanupFront/homeFull.png" class="img-fluid">
                         </div>
                         <div class="col-md-4 text-dark custTxtModal text-white">
@@ -222,7 +221,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-8 d-flex justify-content-center align-items-center">
+                        <div class="col-md-8 d-flex justify-content-center align-items-center mb-3">
                             <img src="../assets/images/projets/cleanupFront/prestationsFull.png" class="img-fluid">
                         </div>
                         <div class="col-md-4 text-dark custTxtModal text-white">
@@ -252,7 +251,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-8 d-flex justify-content-center align-items-center">
+                        <div class="col-md-8 d-flex justify-content-center align-items-center mb-3">
                             <img src="../assets/images/projets/cleanupFront/aboutFull.png" class="img-fluid">
                         </div>
                         <div class="col-md-4 text-dark custTxtModal text-white">
