--- a/projets/coteRecette.html
+++ b/projets/coteRecette.html
@@ -53,7 +53,7 @@
                         <p>Contenu partie client : </p>
                         <div class="ml">
                             <li>HomePage</li>
-                            <li>Nos recettes : liste des recettes disponible avec posibilité de filtrer par catégorie.</li>
+                            <li>Nos recettes : liste des recettes disponibles avec possibilité de filtrer par catégorie.</li>
                             <li>Recette détail : détails de la recette sélectionnée</li>
                             <li>Système de connexion au Backoffice</li>
                             <li>Message validation connexion ou inscription</li>
@@ -62,7 +62,7 @@
                     <div class="mt-3">
                         <p>Partie administrative : </p>
                         <div class="ml">
-                            <li>Recette active : liste des recettes actives et donc disponible pour nos utilisateurs</li>
+                            <li>Recette active : liste des recettes actives et donc disponibles pour nos utilisateurs</li>
                             <li>Recette desactive : liste des recettes désactivées et donc indisponible pour nos utilisateurs</li>
                             <li>Add New : formulaire pour ajouter une nouvelle recette à notre base de données et dans notre partie client</li>
                             <li>Recette détail : détails de la recette sélectionnée</li>
@@ -219,11 +219,11 @@
                         <div class="col-md-4 text-dark custTxtModal text-white">
                             <h5>DESCRIPTIF</h5>
                             <li>
-                                Récupération et présentation de l'ensemble des recettes active disponible en base de donnée, avec possibilité de se rendre sur le détail de la recette en cliquant sur le bouton "Voir plus". 
+                                Récupération et présentation de l'ensemble des recettes actives disponibles en base de données, avec possibilité de se rendre sur le détail de la recette en cliquant sur le bouton "Voir plus". 
                             </li>
                         </br>
                             <li>
-                                Possibilité de filtrer les recettes par catégorie. </br> (Plats chaud, Plats froid, Entrée et Dessert)    
+                                Possibilité de filtrer les recettes par catégorie. </br> (Plats chauds, Plats froids, Entrées et Desserts)    
                             </li>
                         </div>
                     </div>
@@ -262,7 +262,7 @@
                             </li>
                             
                             <li>
-                                Lorsque le formulaire est validé, les données sont envoyé en BDD et le mot de passe est hashé.
+                                Lorsque le formulaire est validé, les données sont envoyées en BDD et le mot de passe est hashé.
                             </li>
                             <li>
                                 L'utilisateur est ensuite redirigé vers une page de confirmation d'inscription. 
@@ -291,7 +291,7 @@
                             <h5>DESCRIPTIF</h5>
                             <p>Menu :</p>
                                 <li>
-                                    Add New : Possibilité d'ajouter une nouvelle recette à notre base de donnée/liste via un formulaire.
+                                    Add New : Possibilité d'ajouter une nouvelle recette à notre base de données/liste via un formulaire.
                                 </li>
                                 <li>
                                     Retour Site : redirection vers la homepage. 
@@ -300,7 +300,7 @@
                                     Déconnexion : fermeture de la session. l'utilisateur est déconnecté et redirigé vers la homepage.
                                 </li>
                             </br>
-                            <p>Page Liste recettes active:</p>
+                            <p>Page Liste recettes actives:</p>
                                 <li>
                                     Possibilité de modifier, supprimer ou désactiver (archiver) une recette. 
                                 </li>
