--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <div>
-                            <p>Développeuse passionnée et jardinière à mes heures perdues, je suis à la recherche d'une alternance à partir de septembre 2024 afin de valider mon diplôme de “Concepteur Développeur d’Application (CDA) en environnement DevOps.</p>
+                            <p>Développeuse passionnée et jardinière à mes heures perdues, je suis à la recherche d'une alternance à partir de septembre 2024 afin de valider mon diplôme de “Concepteur Développeur d’Applications (CDA) en environnement DevOps.</p>
                             <p>Découvrez mes compétences et mon profil en détail en parcourant mon CV en ligne et mon Portfolio.</p>
                         </div>
                     </div>
@@ -105,8 +105,6 @@
             </div>
         </div>
     </section>
-    
-    
 
     <section>
         <div class="py-4 my-5 bgCv" id="cv">
