--- a/projets/cleanupFront.html
+++ b/projets/cleanupFront.html
@@ -51,19 +51,19 @@
                     <p>Ce projet dispose de 2 parties :</p>
                     <div>
                         <p>La partie client (NG_Pressing) qui permettra aux clients de : </p>
-                        <div class="ml">
+                        <ul>
                             <li>Pouvoir découvrir l’entreprise par le biais de diverses pages,</li>
                             <li>D’avoir accès à leur espace client lorsqu’ils se connectent,</li>
                             <li>De choisir leurs articles, la quantité, le service associé ainsi que de sélectionner une date pour déposer leur commande au pressing et de pouvoir payer en ligne en toute sécurité.</li>
-                        </div>
+                        </ul>
                     </div>
                     <div class="mt-3">
                         <p>Et la partie administration : <a href="https://oha204.github.io/camille-janin.github.io/projets/cleanupBack.html" class="text-decoration-none ">SF_Pressing</a> :</p> 
-                        <div class="ml">
+                        <ul>
                             <li>Accessible seulement aux directeurs et leurs employés,</li>
                             <li>Permettra la gestion de toutes les informations disponibles sur le site en fonction des droits attribués à chaque compte,</li>
                             <li>Ainsi que l’assignation des tâches/commandes aux employés.</li>
-                        </div>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -199,11 +199,13 @@
                         <div class="col-md-4 text-dark custTxtModal text-white">
                             <h5>DESCRIPTIF</h5>
                             <p>Présentation de :</p>
+                            <ul>
                                 <li>l'entreprise,</li>
                                 <li>du parcours d'achat,</li>
                                 <li>des services disponibles,</li>
                                 <li>des coordonnées et des horaires d'ouverture,</li>
                                 <li>et des avis clients.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -227,13 +229,19 @@
                         <div class="col-md-4 text-dark custTxtModal text-white">
                             <h5>DESCRIPTIF</h5>
                             <p>Les prestations disponibles :</p>
-                            <li>Les services affichés sont appelés de manière dynamique via la base de données. Ainsi, si une prestation est ajoutée ou supprimée, alors ce bloc se mettra à jour automatiquement.</li>
+                            <ul>
+                                <li>Les services affichés sont appelés de manière dynamique via la base de données. Ainsi, si une prestation est ajoutée ou supprimée, alors ce bloc se mettra à jour automatiquement.</li>
+                            </ul>
                         </br>
                             <p>Les prix chez Clean Up' :</p>
-                            <li>Récupération en base de données et affichage des prix des services, ainsi que des suppléments liés aux articles et aux matières.</li>
+                            <ul>
+                                <li>Récupération en base de données et affichage des prix des services, ainsi que des suppléments liés aux articles et aux matières.</li>
+                            </ul>
                         </br>
                             <p>Le simulateur :</p>
-                            <li>Permets aux utilisateurs de sélectionner un service, le type d'article concerné, ainsi que sa quantité, et la matière. En cliquant sur le bouton "Simuler", le prix total de la prestation s'affiche.</li>
+                            <ul>
+                                <li>Permets aux utilisateurs de sélectionner un service, le type d'article concerné, ainsi que sa quantité, et la matière. En cliquant sur le bouton "Simuler", le prix total de la prestation s'affiche.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -257,14 +265,14 @@
                         <div class="col-md-4 text-dark custTxtModal text-white">
                             <h5>DESCRIPTIF</h5>
                             <p>Partie "Qui sommes-nous ?" :</p>
-                            <li>
-                                Présentation de Clean Up'. 
-                            </li>
+                            <ul>
+                                <li>Présentation de Clean Up'.</li>
+                            </ul>
                         </br>
                             <p>Partie "Valeurs et engagements" :</p>
-                            <li>
-                                Présentation des valeurs et des engagements de l'entreprise.
-                            </li>
+                            <ul>
+                                <li>Présentation des valeurs et des engagements de l'entreprise.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
