--- a/projets/coteRecette.html
+++ b/projets/coteRecette.html
@@ -51,22 +51,22 @@
                     </p>
                     <div>
                         <p>Contenu partie client : </p>
-                        <div class="ml">
+                        <ul>
                             <li>HomePage</li>
                             <li>Nos recettes : liste des recettes disponibles avec possibilité de filtrer par catégorie.</li>
                             <li>Recette détail : détails de la recette sélectionnée</li>
                             <li>Système de connexion au Backoffice</li>
                             <li>Message validation connexion ou inscription</li>
-                        </div>
+                        </ul>
                     </div>
                     <div class="mt-3">
                         <p>Partie administrative : </p>
-                        <div class="ml">
+                        <ul>
                             <li>Recette active : liste des recettes actives et donc disponibles pour nos utilisateurs</li>
                             <li>Recette desactive : liste des recettes désactivées et donc indisponible pour nos utilisateurs</li>
                             <li>Add New : formulaire pour ajouter une nouvelle recette à notre base de données et dans notre partie client</li>
                             <li>Recette détail : détails de la recette sélectionnée</li>
-                        </div>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -189,13 +189,13 @@
                         </div>
                         <div class="col-md-4 text-dark custTxtModal text-white">
                             <h5>DESCRIPTIF</h5>
-                            <li>
-                                Récupération et présentation des 4 dernières recettes ajoutées en base de donnée, avec possibilité de se rendre sur le détail de la recette en cliquant sur le bouton "Voir plus". 
-                            </li>
+                            <ul>
+                                <li>Récupération et présentation des 4 dernières recettes ajoutées en base de donnée, avec possibilité de se rendre sur le détail de la recette en cliquant sur le bouton "Voir plus".</li>
+                            </ul>
                         </br>
-                            <li>
-                                Formulaire d'inscription à notre newsletter. Les emails sont stockés dans un fichier texte.    
-                            </li>
+                        <ul>
+                            <li>Formulaire d'inscription à notre newsletter. Les emails sont stockés dans un fichier texte.</li>
+                        </ul>
                         </div>
                     </div>
                 </div>
@@ -218,13 +218,13 @@
                         </div>
                         <div class="col-md-4 text-dark custTxtModal text-white">
                             <h5>DESCRIPTIF</h5>
-                            <li>
-                                Récupération et présentation de l'ensemble des recettes actives disponibles en base de données, avec possibilité de se rendre sur le détail de la recette en cliquant sur le bouton "Voir plus". 
-                            </li>
+                            <ul>
+                                <li>Récupération et présentation de l'ensemble des recettes actives disponibles en base de données, avec possibilité de se rendre sur le détail de la recette en cliquant sur le bouton "Voir plus".</li>
+                            </ul>
                         </br>
-                            <li>
-                                Possibilité de filtrer les recettes par catégorie. </br> (Plats chauds, Plats froids, Entrées et Desserts)    
-                            </li>
+                        <ul>
+                            <li>Possibilité de filtrer les recettes par catégorie. </br> (Plats chauds, Plats froids, Entrées et Desserts)</li>
+                        </ul>
                         </div>
                     </div>
                 </div>
@@ -248,25 +248,17 @@
                         <div class="col-md-4 text-dark custTxtModal text-white">
                             <h5>DESCRIPTIF</h5>
                             <p class="">Formulaire de connexion :</p>
-                            <li>
-                                Pour le moment seul l'administration est disponible. La partie "espace client" est en cours de création. 
-                            </li>
-                            <li>
-                                Après son authentification, l'admin est redirigé vers l'administration de son site de recette et démarre une session.
-                            </li>
+                            <ul>
+                                <li>Pour le moment seul l'administration est disponible. La partie "espace client" est en cours de création.</li>
+                                <li>Après son authentification, l'admin est redirigé vers l'administration de son site de recette et démarre une session.</li>
+                            </ul>
                         </br>
                             <p>Formulaire d'inscription :</p>
-
-                            <li>
-                                Le formulaire demande certaines conditions afin de pouvoir être validé : le format email est obligatoire & le mot de passe doit contenir minimum 8 caractères.
-                            </li>
-                            
-                            <li>
-                                Lorsque le formulaire est validé, les données sont envoyées en BDD et le mot de passe est hashé.
-                            </li>
-                            <li>
-                                L'utilisateur est ensuite redirigé vers une page de confirmation d'inscription. 
-                            </li>
+                            <ul>
+                                <li>Le formulaire demande certaines conditions afin de pouvoir être validé : le format email est obligatoire & le mot de passe doit contenir minimum 8 caractères.</li>
+                                <li>Lorsque le formulaire est validé, les données sont envoyées en BDD et le mot de passe est hashé.</li>
+                                <li>L'utilisateur est ensuite redirigé vers une page de confirmation d'inscription.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -290,20 +282,16 @@
                         <div class="col-md-4 custTxtModal text-white">
                             <h5>DESCRIPTIF</h5>
                             <p>Menu :</p>
-                                <li>
-                                    Add New : Possibilité d'ajouter une nouvelle recette à notre base de données/liste via un formulaire.
-                                </li>
-                                <li>
-                                    Retour Site : redirection vers la homepage. 
-                                </li>
-                                <li>
-                                    Déconnexion : fermeture de la session. l'utilisateur est déconnecté et redirigé vers la homepage.
-                                </li>
+                            <ul>
+                                <li>Add New : Possibilité d'ajouter une nouvelle recette à notre base de données/liste via un formulaire.</li>
+                                <li>Retour Site : redirection vers la homepage.</li>
+                                <li>Déconnexion : fermeture de la session. l'utilisateur est déconnecté et redirigé vers la homepage.</li>
+                            </ul>
                             </br>
                             <p>Page Liste recettes actives:</p>
-                                <li>
-                                    Possibilité de modifier, supprimer ou désactiver (archiver) une recette. 
-                                </li>
+                            <ul>
+                                <li>Possibilité de modifier, supprimer ou désactiver (archiver) une recette.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
