--- a/projets/cleanupFront.html
+++ b/projets/cleanupFront.html
@@ -58,7 +58,7 @@
                         </ul>
                     </div>
                     <div class="mt-3">
-                        <p>Et la partie administration : <a href="https://oha204.github.io/camille-janin.github.io/projets/cleanupBack.html" class="text-decoration-none ">SF_Pressing</a> :</p> 
+                        <p>Et la partie administration <a href="https://oha204.github.io/camille-janin.github.io/projets/cleanupBack.html" class="text-decoration-none ">(SF_Pressing)</a> :</p> 
                         <ul>
                             <li>Accessible seulement aux directeurs et leurs employés,</li>
                             <li>Permettra la gestion de toutes les informations disponibles sur le site en fonction des droits attribués à chaque compte,</li>
