--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <a href="https://oha204.github.io/camille-janin.github.io/cv.html" class="btn-custom">
                     <span>CV en ligne <i class="fas fa-file-alt"></i></span>
                 </a>
-                <a href="../Portefolio/assets/images/CV_CamilleJanin.pdf" class="btn-custom" download="CV_CamilleJanin.pdf">
+                <a href="../Portefolio/assets/images/CV_Camille_ Janin.pdf" class="btn-custom" download="CV_Camille_ Janin.pdf">
                     <span>Télécharger CV <i class="fas fa-file-alt"></i></span>
                 </a>
             </div>
