--- a/projets/coteRecette.html
+++ b/projets/coteRecette.html
@@ -184,18 +184,15 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-8 d-flex justify-content-center align-items-center">
+                        <div class="col-md-8 d-flex justify-content-center align-items-center  order-2 order-md-1">
                             <img src="../assets/images/projets/CoteRecette/homeFull.png" class="img-fluid">
                         </div>
-                        <div class="col-md-4 text-dark custTxtModal text-white">
+                        <div class="col-md-4 text-dark custTxtModal text-white order-1 order-md-2">
                             <h5>DESCRIPTIF</h5>
                             <ul>
                                 <li>Récupération et présentation des 4 dernières recettes ajoutées en base de donnée, avec possibilité de se rendre sur le détail de la recette en cliquant sur le bouton "Voir plus".</li>
+                                <li>Formulaire d'inscription à notre newsletter. Les emails sont stockés dans un fichier texte.</li>
                             </ul>
-                        </br>
-                        <ul>
-                            <li>Formulaire d'inscription à notre newsletter. Les emails sont stockés dans un fichier texte.</li>
-                        </ul>
                         </div>
                     </div>
                 </div>
@@ -213,18 +210,15 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-8 d-flex justify-content-center align-items-center">
+                        <div class="col-md-8 d-flex justify-content-center align-items-center order-2 order-md-1">
                             <img src="../assets/images/projets/CoteRecette/listeRecetteFull.png" class="img-fluid">
                         </div>
-                        <div class="col-md-4 text-dark custTxtModal text-white">
+                        <div class="col-md-4 text-dark custTxtModal text-white order-1 order-md-2">
                             <h5>DESCRIPTIF</h5>
                             <ul>
                                 <li>Récupération et présentation de l'ensemble des recettes actives disponibles en base de données, avec possibilité de se rendre sur le détail de la recette en cliquant sur le bouton "Voir plus".</li>
+                                <li>Possibilité de filtrer les recettes par catégorie. </br> (Plats chauds, Plats froids, Entrées et Desserts)</li>
                             </ul>
-                        </br>
-                        <ul>
-                            <li>Possibilité de filtrer les recettes par catégorie. </br> (Plats chauds, Plats froids, Entrées et Desserts)</li>
-                        </ul>
                         </div>
                     </div>
                 </div>
@@ -242,17 +236,16 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-8 d-flex justify-content-center align-items-center">
+                        <div class="col-md-8 d-flex justify-content-center align-items-center order-2 order-md-1">
                             <img src="../assets/images/projets/CoteRecette/LoginForm.png" class="img-fluid">
                         </div>
-                        <div class="col-md-4 text-dark custTxtModal text-white">
+                        <div class="col-md-4 text-dark custTxtModal text-white order-1 order-md-2">
                             <h5>DESCRIPTIF</h5>
                             <p class="">Formulaire de connexion :</p>
                             <ul>
                                 <li>Pour le moment seul l'administration est disponible. La partie "espace client" est en cours de création.</li>
                                 <li>Après son authentification, l'admin est redirigé vers l'administration de son site de recette et démarre une session.</li>
                             </ul>
-                        </br>
                             <p>Formulaire d'inscription :</p>
                             <ul>
                                 <li>Le formulaire demande certaines conditions afin de pouvoir être validé : le format email est obligatoire & le mot de passe doit contenir minimum 8 caractères.</li>
@@ -276,10 +269,10 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-8 d-flex justify-content-center align-items-center">
+                        <div class="col-md-8 d-flex justify-content-center align-items-center order-2 order-md-1">
                             <img src="../assets/images/projets/CoteRecette/BackofficeFull.png" class="img-fluid">
                         </div>
-                        <div class="col-md-4 custTxtModal text-white">
+                        <div class="col-md-4 custTxtModal text-white order-1 order-md-2">
                             <h5>DESCRIPTIF</h5>
                             <p>Menu :</p>
                             <ul>
@@ -287,7 +280,6 @@
                                 <li>Retour Site : redirection vers la homepage.</li>
                                 <li>Déconnexion : fermeture de la session. l'utilisateur est déconnecté et redirigé vers la homepage.</li>
                             </ul>
-                            </br>
                             <p>Page Liste recettes actives:</p>
                             <ul>
                                 <li>Possibilité de modifier, supprimer ou désactiver (archiver) une recette.</li>
